--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
+
 <web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+         https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
          version="6.0">
 
+    <!-- Verify Servlet -->
     <servlet>
         <servlet-name>VerifyServlet</servlet-name>
         <servlet-class>org.kartavya.VerifyServlet</servlet-class>
@@ -14,24 +17,26 @@
         <url-pattern>/verify</url-pattern>
     </servlet-mapping>
 
+    <!-- Register Servlet -->
     <servlet>
-        <servlet-name>register</servlet-name>
+        <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>org.kartavya.RegisterServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>register</servlet-name>
+        <servlet-name>RegisterServlet</servlet-name>
         <url-pattern>/register</url-pattern>
     </servlet-mapping>
 
+    <!-- Update Student Profile Servlet -->
     <servlet>
-        <servlet-name>Update</servlet-name>
+        <servlet-name>UpdateStudentProfileServlet</servlet-name>
         <servlet-class>org.kartavya.UpdateStudentProfileServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>Update</servlet-name>
-        <url-pattern>/Update</url-pattern>
+        <servlet-name>UpdateStudentProfileServlet</servlet-name>
+        <url-pattern>/update</url-pattern>
     </servlet-mapping>
 
 </web-app>
